<resources>
    <string name="app_name">NavGraph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log in</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email"> Enter Your Email</string>
    <string name="enter_your_password"> Enter Your Password</string>
    <string name="new_to_app">New to App?</string>
    <string name="sign_up">Sign Up</string>
    <string name="dashboard">DashBoard</string>
    <string name="first_name"> First Name</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="last_name"> Last Name</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="use_6_charachter_mix_of_leters_numbers_and_symbols">Use 6 charachter mix of leters,numbers and symbols</string>
    <string name="signin">SignIn</string>
    <string name="by_signing_up_you_agree_to_term_of_use_and_privacy_policy">By Signing Up you agree to term of use and privacy policy.</string>
    <string name="signup">SignUp</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="account_setting">ACCOUNT SETTING</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="user_name">Name</string>
    <string name="account_number">00 123 456</string>
    <string name="bank_account">Bank Account</string>
    <string name="email_hint">karina_buys@email.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">+92 321 1234567</string>
    <string name="your_address">Your Address</string>
    <string name="Address_hint">House no.9, Street no.04,City</string>
    <string name="cradit_dabit_card">Cradit/Dabit Card</string>
    <string name="craditcard_hint">000 123 456</string>
    <string name="end_text">* Nunc faucibus pellentisque sit amit porttiter eget dolor morbi non</string>
    <string name="save">SAVE</string>
    <string name="flight_booking">FLIGHT BOOKING</string>
    <string name="your_name">YOUR NAME</string>
    <string name="point">POINT</string>
    <string name="_825">825</string>
    <string name="flights">Flights</string>
    <string name="button_that_applies_an_image_filter">Button that applies an image filter</string>
    <string name="destination">Destination</string>
    <string name="hotels">Hotels</string>
    <string name="hotel_button_image">Hotel Button image</string>
    <string name="car_rent">Car Rent</string>
    <string name="car_rent_image_button">Car Rent Image Button</string>
    <string name="train">Train</string>
    <string name="train_image_button">Train Image Button</string>
    <string name="culinary">Culinary</string>
    <string name="image_button_culinary">Image Button Culinary</string>
    <string name="insurance">Insurance</string>
    <string name="insurance_image_button">Insurance Image Button</string>
    <string name="coupons">Coupons</string>
    <string name="coupons_image_button">Coupons Image Button</string>
    <string name="events">Events</string>
    <string name="event_button">Event Button</string>
</resources>