<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".ThirdFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/create_your_account"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <EditText
            android:id="@+id/txtfname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:background="@drawable/fields"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtlname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:background="@drawable/fields"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtfname"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"
            android:ems="10"
            android:hint="@string/email"
            android:background="@drawable/fields"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="0dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtlname"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"
            android:ems="10"
            android:hint="@string/password"
            android:background="@drawable/fields"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtemail"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/use_6_charachter_mix_of_leters_numbers_and_symbols"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintWidth_percent="0.8"
            android:layout_marginTop="@dimen/_12sdp"

            android:text="@string/by_signing_up_you_agree_to_term_of_use_and_privacy_policy"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_219sdp"
            android:text="@string/signup"
            android:background="@drawable/fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintWidth_percent="0.35" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:background="@drawable/fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintStart_toEndOf="@+id/btnSignup"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:layout_constraintWidth_percent="0.35" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="@+id/btnSignup"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.08"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:text="@string/signin"
            android:clickable="true"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/btncancel"
            android:focusable="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
