<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingFragment"
    android:background="@color/cardview_dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="1" >


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintWidth_percent="0.9">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.043"
            app:layout_constraintWidth_percent="0.5"
            android:text="@string/account_setting"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintHorizontal_bias="0.6"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/textView4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.85">


            <ImageView
                android:id="@+id/imagProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/profileicon"
                app:layout_constraintHeight_percent="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintVertical_bias="0.02"
                app:layout_constraintHorizontal_bias="0.05"
                android:contentDescription="@string/profile_image" />


            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/name"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/UserName"
                app:layout_constraintHeight_percent="0.033"
                app:layout_constraintStart_toEndOf="@+id/imagProfile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintHorizontal_bias="0.1"
                />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@id/textView15"
                android:background="@drawable/sidecorner"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.59"
                app:layout_constraintVertical_bias="0.025"
                app:layout_constraintHorizontal_bias="0.1"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txtAccountNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sidecorner"
                android:ems="10"
                android:hint="@string/account_number"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintStart_toStartOf="@id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.6"
                android:autofillHints="Account Number" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/bank_account"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.034"
                app:layout_constraintStart_toStartOf="@id/UserName"
                app:layout_constraintTop_toBottomOf="@+id/UserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintHorizontal_bias="0.001"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintStart_toStartOf="@+id/imagProfile"
                app:layout_constraintTop_toBottomOf="@+id/imagProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.07"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintWidth_percent="0.3" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sidecorner"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintWidth_percent="0.85"
                android:autofillHints=""/>


            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/password"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintStart_toStartOf="@+id/txtEmail"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintWidth_percent="0.35" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sidecorner"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintHeight_percent="0.09"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintWidth_percent="0.85"
                android:autofillHints="" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/phone_number"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintStart_toStartOf="@+id/txtPassword"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintWidth_percent="0.51" />

            <EditText
                android:id="@+id/txtPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sidecorner"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintHeight_percent="0.09"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.85"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/your_address"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintStart_toStartOf="@+id/txtPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.46" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:background="@drawable/sidecorner"
                android:gravity="left|right"
                android:hint="@string/Address_hint"
                android:inputType="textPostalAddress"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.85"
                android:autofillHints=""
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/cradit_dabit_card"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHeight_percent="0.04"
                app:layout_constraintStart_toStartOf="@+id/txtAddress"
                app:layout_constraintTop_toBottomOf="@+id/txtAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.6" />

            <EditText
                android:id="@+id/txtCraditCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/sidecorner"
                android:hint="@string/craditcard_hint"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.001"
                app:layout_constraintVertical_bias="0.001"
                app:layout_constraintWidth_percent="0.85"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/end_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCraditCard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintWidth_percent="0.85" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintWidth_percent="0.35" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
